# highlight-span

./: .rustfmt.toml  Cargo.toml  README.md  flake.nix
examples/: hello.minilang  lex-minilang.rs
src/: lib.rs  line_index.rs  main.rs  span_like.rs
