[package]
name = "highlight-span"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
owo-colors = "3.5.0"
tabled = { version = "0.14.0", features = ["derive", "color"] }

[dev-dependencies]
logos = "0.13.0"
